# Kill-Em-All

./: Cargo.toml  example.sh  readme.md  readme_zhCN.md
.github/workflows/: main.yaml
src/: main.rs
src/core/: checker.rs  mod.rs  selector.rs
src/render/: const_content.rs  mod.rs  renderer.rs
test_npm/: .gitignore
test_npm/ignore/: package.json
test_npm/not_ignore/: package.json
