[package]
name = "kmall"
version = "0.1.0"
edition = "2021"
authors = ["Sieyalixnet <sieyalixnet@163.com>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
unicode-width = "0.1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.31"
fs_extra = "1.3.0"
open = "5"
clap = { version = "3.2.23", features = ["derive"] }

[dependencies.rusty_pool]
version = "0.7.0"
default-features = false
